erlang-p1-stun (1:1.0.12-0.2) unstable; urgency=medium

  * Fix dh_rebar version.

 -- Mathias Ertl <mati@jabber.at>  Fri, 07 Jul 2017 00:33:48 +0200

erlang-p1-stun (1:1.0.12-0.1) unstable; urgency=medium

  * New upstream release.
  * Update Standards-Version to 4.0.0 (no changes needed).

 -- Mathias Ertl <mati@jabber.at>  Fri, 07 Jul 2017 00:33:48 +0200

erlang-p1-stun (1:1.0.10-0.2) unstable; urgency=medium

  * Fix upstream version passed to dh-rebar.

 -- Mathias Ertl <mati@jabber.at>  Mon, 27 Mar 2017 10:23:50 +0200

erlang-p1-stun (1:1.0.10-0.1) unstable; urgency=medium

  * New upstream release.
  * Depend on erlang-p1-tls (>= 1.0.11), erlang-p1-utils (>= 1.0.7).
  * Update Standards-Version to 3.9.8 (no changes needed).

 -- Mathias Ertl <mati@jabber.at>  Sun, 26 Mar 2017 21:06:06 +0200

erlang-p1-stun (1:1.0.9-0.1) unstable; urgency=medium

  * New upstream release.

 -- Mathias Ertl <mati@jabber.at>  Sat, 28 Jan 2017 19:35:19 +0100

erlang-p1-stun (1:1.0.7-0.1) unstable; urgency=medium

  * New upstream release.

 -- Mathias Ertl <mati@jabber.at>  Thu, 22 Sep 2016 17:41:40 +0200

erlang-p1-stun (1:1.0.6-0.1) unstable; urgency=medium

  * New upstream release.

 -- Mathias Ertl <mati@jabber.at>  Sat, 06 Aug 2016 18:05:03 +0200

erlang-p1-stun (1:1.0.4-0.1) unstable; urgency=medium

  * New upstream release.

 -- Mathias Ertl <mati@jabber.at>  Wed, 29 Jun 2016 20:33:10 +0200

erlang-p1-stun (1:1.0.3-0.2) unstable; urgency=medium

  * Fix dh-rebar version.

 -- Mathias Ertl <mati@jabber.at>  Wed, 04 May 2016 18:42:45 +0200

erlang-p1-stun (1:1.0.3-0.1) unstable; urgency=medium

  * New upstream release.
  * Update erlang-p1-tls and erlang-p1-utils dependencies.

 -- Mathias Ertl <mati@jabber.at>  Tue, 03 May 2016 21:56:52 +0200

erlang-p1-stun (1:1.0.1-0.2) unstable; urgency=medium

  * Add PKG_VERSION to dh_rebar.conf.
  * Conflicts with ejabberd << 1:16.02.

 -- Mathias Ertl <mati@jabber.at>  Fri, 11 Mar 2016 16:21:14 +0100
