@@ -1,8 +1,9 @@
 erlang-p1-stun (1:1.0.12-0.2) unstable; urgency=medium
 
   * Fix dh_rebar version.
+  * Add check to test for dh_rebar version to prevent future mistakes.
 
- -- Mathias Ertl <mati@jabber.at>  Fri, 07 Jul 2017 00:33:48 +0200
+ -- Mathias Ertl <mati@jabber.at>  Fri, 07 Jul 2017 13:31:20 +0200
 
 erlang-p1-stun (1:1.0.12-0.1) unstable; urgency=medium
 
